Resized carousel and changed font

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="header">
     </div>
     <div class="flex-container">
-      <div><h1>Rosmini College</h1></div>
-      <img src="logo.png" width="auto" height="auto" class="center">
-      <div><h2>Charity Fulfills the Law</h2></div>
+      <div><h2>Rosmini College</h2></div>
+      <img src="logo.png" width="auto" height="auto" class="logo">
+      <div><h3>Charity Fulfills the Law</h3></div>
     </div>  
     <ul>
       <li><a class="active" href="#home">Home</a></li>
