--- a/index.html
+++ b/index.html
@@ -110,9 +110,19 @@
         dots[slideIndex-1].className += " active";
       }
       </script>
-<footer>
-  <p>Author: Hege Refsnes<br>
-  <a href="mailto:hege@example.com">hege@example.com</a></p>
+<footer class="footer">
+  <div class="column">
+    <h3>Column 1</h3>
+    <p>Content for column 1.</p>
+  </div>
+  <div class="column">
+    <h3>Column 2</h3>
+    <p>Content for column 2.</p>
+  </div>
+  <div class="column">
+    <h3>Column 3</h3>
+    <p>Content for column 3.</p>
+  </div>
 </footer>
     
 </body>
