--- a/index.html
+++ b/index.html
@@ -104,16 +104,25 @@
       </script>
 <footer class="footer">
   <div class="column">
-    <h4>Contact Us  </h4>
-    <p>36 Dominion Street<br>Takapuna<br>Auckland, 0622 <br>Phone: +64 9 489 5417 <br>admin@rosmini.school.nz</p>
+    <p class="footertext">Contact Us</p>
+    <p class="footertext">Dominion Street</p>
+    <p class="footertext">Takapuna</p>
+    <p class="footertext">Auckland, 0622</p>
+    <p class="footertext">Phone: +64 9 489 5417</p>
+    <p class="footertext">admin@rosmini.school.nz</p>
+    
   </div>
   <div class="column">
-    <h4>Students</h4>
-    <p>Home<br>Sport<br>News</p>
+    <p class="footertext">Students</p>
+    <p class="footertext">Home</p>
+    <p class="footertext">Sport</p>
+    <p class="footertext">News</p>
   </div>
   <div class="column">
-    <h4>Parents</h4>
-    <p>Staff<br>Learning Areas<br>News<br>Contact Us</p>
+    <p class="footertext">Parents</p>
+    <p class="footertext">Staff</p>
+    <p class="footertext">Learning Areas</p>
+    <p class="footertext">Contact Us</p>
 
   </div>
 </footer>
