--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 4</div>
-        <img src="carousel1.jpg" style="width:100%">
+        <img src="orchestra.jpg" style="width:100%">
       </div>
       
       <div class="mySlides fade">
         <div class="numbertext">2 / 4</div>
-        <img src="carousel2.jpg" style="width:100%">
+        <img src="science.jpg" style="width:100%">
       </div>
       
       <div class="mySlides fade">
         <div class="numbertext">3 / 4</div>
-        <img src="carousel3.jpg" style="width:100%">
+        <img src="students.jpg" style="width:100%">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">4 / 4</div>
-        <img src="carousel4.jpg" style="width:100%">
+        <img src="cricket.jpg" style="width:100%">
       </div>
       <a class="prev" onclick="plusSlides(-1)">❮</a>
       <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
     </div>
 
-    <div class="titleAbout">About Rosmini College</div>
+    <div class="titleAbout"><strong>About Rosmini College</strong></div>
     <div class="intro-text">
       Rosmini College is a Catholic Boys’ School founded by the Rosminian order to provide a Catholic education to young men on Auckland’s North Shore. We aim to shape them into well-rounded young men ready to leave school who are able to make a positive contribution to society and are empowered to serve others by living out the founder’s maxims.
     </div>
