Made a new sport page and made a 3x3 flexbox with all sports and names of them

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>  
     <ul>
       <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#sports">Sport </a></li>
+      <li><a href="sport.html">Sport </a></li>
       <li><a href="#staff">Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
