--- a/sport.html
+++ b/sport.html
@@ -26,13 +26,19 @@
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
 
+    <div class="text-container">
+      <div class="text-left">
+        <div class="image-item">
+        <p>Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</p>
+      </div>
+    </div>
       <div class="image-grid">
         <div class="image-item">
           <img src="basketball.jpg" alt="Basketball">
           <p><strong>Basketball</strong></p>
         </div>
         <div class="image-item">
-          <img src="criket.jpg" alt="Cricket">
+          <img src="cricket.jpg" alt="Cricket">
           <p><strong>Cricket</strong></p>
         </div>
         <div class="image-item">
@@ -64,7 +70,18 @@
           <p><strong>Water Polo</strong></p>
         </div>
       </div>
-      
+      <div class="text-right">
+        <div class="image-item">
+        <p><strong>We are committed to:</strong><br>
+          Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities.
+          Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine.
+          Fostering and nurturing athletes who aspire to excellence in their selected codes.
+          Developing the whole person as well as the athlete.
+          Engaging with the school's wider community through developing partnerships with external agencies, regional and national sporting bodies and other schools.
+          Rosmini College primarily focuses on encouraging enjoyment of sport and traditions of sportmanship and fair play. Further to this, excellence is also valued and the Rosmini College High Performance Sport programme is designed to cater for those individuals aiming to follow a pathway of competitive sport.</p>
+      </div>
+    </div>
+  </div>
 
     <footer class="footer">
       <div class="column">
