--- a/sport.html
+++ b/sport.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="sports.css">
 </head>
 <body>
 
@@ -85,24 +85,24 @@
 
     <footer class="footer">
       <div class="column">
-        <p class="footertext">Contact Us</p>
-        <p class="footertext">Dominion Street</p>
-        <p class="footertext">Takapuna</p>
-        <p class="footertext">Auckland, 0622</p>
-        <p class="footertext">Phone: +64 9 489 5417</p>
-        <p class="footertext">admin@rosmini.school.nz</p>
+        <p class="footertextinfo">Contact Us<br></p>
+        <p class="footertextinfo">Dominion Street<br></p>
+        <p class="footertextinfo">Takapuna<br></p>
+        <p class="footertextinfo">Auckland, 0622<br></p>
+        <p class="footertextinfo">Phone: +64 9 489 5417<br></p>
+        <p class="footertextinfo">admin@rosmini.school.nz<br></p>
       </div>
       <div class="column">
-        <p class="footertext">Students</p>
-        <p class="footertext">Home</p>
-        <p class="footertext">Sport</p>
-        <p class="footertext">News</p>
+        <a class="footertext" href="index.html">Home<br></a>
+        <a class="footertext" href="sport.html">Sport<br></a>
+        <a class="footertext" href="staff.html">Staff<br></a>
+        <a class="footertext">News<br></a>
       </div>
       <div class="column">
-        <p class="footertext">Parents</p>
-        <p class="footertext">Staff</p>
-        <p class="footertext">Learning Areas</p>
-        <p class="footertext">Contact Us</p>
+        <a class="footertext">Parents<br></a>
+        <a class="footertext">Staff<br></a>
+        <a class="footertext">Learning Areas<br></a>
+        <a class="footertext">Contact Us<br></a>
       </div>
     </footer>
     
