Made staff page and fixed navbar and some minor fixes on all pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rosmini College Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,12 +19,12 @@
     <div class="flex-container">
       <div><h2>Rosmini College</h2></div>
       <img src="logo.png" class="logo">
-      <div><h3>Charity Fulfills the Law</h3></div>
+      <div><h3>Charity Fulfils the Law</h3></div>
     </div>  
     <ul>
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="sport.html">Sport </a></li>
-      <li><a href="#staff">Staff</a></li>
+      <li><a href="staff.html">Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
