--- a/sport.html
+++ b/sport.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sport | Rosmini College</title>
     <link rel="stylesheet" href="sports.css">
 </head>
 <body>
 
     <div class="header">
     </div>
-    
     <div class="flex-container">
       <div><h2>Rosmini College</h2></div>
       <img src="logo.png" class="logo">
-      <div><h3>Charity Fulfills the Law</h3></div>
+      <div><h3>Charity Fulfils the Law</h3></div>
     </div>  
     
     <ul>
@@ -25,10 +24,12 @@
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
-
+    <div class="titlesport">
+    <h2> Sport at Rosmini College</h2>
+    </div>
     <div class="text-container">
       <div class="text-left">
-        <div class="image-item">
+        <div class="text-item">
         <p>Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</p>
       </div>
     </div>
@@ -71,7 +72,7 @@
         </div>
       </div>
       <div class="text-right">
-        <div class="image-item">
+        <div class="text-item">
         <p><strong>We are committed to:</strong><br>
           Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities.
           Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine.
