Worked on making website responsive. Still need to work of sport and staff page responsiveness

--- a/staff.html
+++ b/staff.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff | Rosmini College</title>
-    <link rel="stylesheet" href="staff.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rosmini College Website</title>
+  <link rel="stylesheet" href="staff.html" />
 </head>
 <body>
 
-    <div class="header">
-    </div>
-    
-    <div class="flex-container">
-        <div><h2>Rosmini College</h2></div>
-        <img src="logo.png" class="logo">
-        <div><h3>Charity Fulfills the Law</h3></div>
-    </div>  
-    
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="sport.html">Sport</a></li>
-        <li><a class="active" href="staff.html">Staff</a></li>
-        <li><a href="#learningareas">Learning Areas</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contactus">Contact Us</a></li>
+  <div class="flex-container">
+    <div><h2>Rosmini College</h2></div>
+    <img src="logo.png" class="logo" alt="Rosmini College Logo" />
+    <div><h3>Charity Fulfils the Law</h3></div>
+  </div>
+
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="sport.html">Sport</a></li>
+      <li><a href="staff.html">Staff</a></li>
+      <li><a href="#learningareas">Learning Areas</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contactus">Contact Us</a></li>
     </ul>
+  </nav>
     <div class="titlestaff">
         <h2> Staff at Rosmini College</h2>
         </div>
@@ -61,9 +60,9 @@
                 <p>Geology Teacher</p>
             </div>
             <div class="staff-member">
-                <img src="cooper.png" alt="Principal">
+                <img src="cooper.png" alt="Geography Teacher 4">
                 <h4>Mr. Nixon Cooper</h4>
-                <p>Principal</p>
+                <p>Geology Teacher</p>
             </div>
         </div>
     </div>
