--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rosmini College Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rosmini College Website</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
+  <div class="flex-container">
+    <div><h2>Rosmini College</h2></div>
+    <img src="logo.png" class="logo" alt="Rosmini College Logo" />
+    <div><h3>Charity Fulfils the Law</h3></div>
+  </div>
 
-
-
-
-
-    
-    <div class="header">
-    </div>
-    <div class="flex-container">
-      <div><h2>Rosmini College</h2></div>
-      <img src="logo.png" class="logo">
-      <div><h3>Charity Fulfils the Law</h3></div>
-    </div>  
-    <ul>
+  <nav class="navbar">
+    <ul class="nav-links">
       <li><a class="active" href="#home">Home</a></li>
-      <li><a href="sport.html">Sport </a></li>
+      <li><a href="sport.html">Sport</a></li>
       <li><a href="staff.html">Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
-
+  </nav>
     <div class="slideshow-container">
 
       <div class="mySlides fade">
