made staff page responsive

--- a/sport.html
+++ b/sport.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport | Rosmini College</title>
-    <link rel="stylesheet" href="sports.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rosmini College Website</title>
+  <link rel="stylesheet" href="sports.css" />
 </head>
 <body>
 
-    <div class="header">
-    </div>
-    <div class="flex-container">
-      <div><h2>Rosmini College</h2></div>
-      <img src="logo.png" class="logo">
-      <div><h3>Charity Fulfils the Law</h3></div>
-    </div>  
-    
-    <ul>
+  <div class="flex-container">
+    <div><h2>Rosmini College</h2></div>
+    <img src="logo.png" class="logo" alt="Rosmini College Logo" />
+    <div><h3>Charity Fulfils the Law</h3></div>
+  </div>
+
+  <nav class="navbar">
+    <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a class="active" href="sport.html">Sport</a></li>
+      <li><a class="active" href="#sport" >Sport</a></li>
       <li><a href="staff.html">Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
+  </nav>
     <div class="titlesport">
     <h2> Sport at Rosmini College</h2>
     </div>
