--- a/staff.html
+++ b/staff.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rosmini College Website</title>
-  <link rel="stylesheet" href="staff.html" />
+  <link rel="stylesheet" href="staff.css" />
 </head>
 <body>
 
@@ -16,9 +16,9 @@
 
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="sport.html">Sport</a></li>
-      <li><a href="staff.html">Staff</a></li>
+      <li><a href="staff.html" class="active" >Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
@@ -47,22 +47,22 @@
             <div class="staff-member">
                 <img src="latch.png" alt="Geography Teacher 1">
                 <h4>Mr. Roger Latch</h4>
-                <p>Geology Teacher</p>
+                <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
                 <img src="maggs.png" alt="Geography Teacher 2">
                 <h4>Mr. Geoff Maggs</h4>
-                <p>Geology Teacher</p>
+                <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
                 <img src="morrogh.png" alt="Geography Teacher 3">
                 <h4>Ms. Judith Morrogh</h4>
-                <p>Geology Teacher</p>
+                <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
                 <img src="cooper.png" alt="Geography Teacher 4">
                 <h4>Mr. Nixon Cooper</h4>
-                <p>Geology Teacher</p>
+                <p>Geography Teacher</p>
             </div>
         </div>
     </div>
