fixed file structure and cleaned up code #

--- a/html/sport.html
+++ b/html/sport.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rosmini College Website</title>
-  <link rel="stylesheet" href="sports.css" />
+  <link rel="stylesheet" href="../css/sports.css">
 </head>
 <body>
-
+<!-- Title and Logo -->
   <div class="flex-container">
     <div><h2>Rosmini College</h2></div>
-    <img src="logo.png" class="logo" alt="Rosmini College Logo" />
+    <img src="../assets/logo.png" class="logo" alt="Rosmini College Logo">
     <div><h3>Charity Fulfils the Law</h3></div>
   </div>
-
+<!-- Navbar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a class="active" href="#sport" >Sport</a></li>
       <li><a href="staff.html">Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
@@ -24,53 +24,57 @@
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
   </nav>
+<!-- Sport title -->
     <div class="titlesport">
     <h2> Sport at Rosmini College</h2>
     </div>
+	<!-- Side left text -->
     <div class="text-container">
       <div class="text-left">
         <div class="text-item">
         <p>Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</p>
       </div>
     </div>
+		<!--3x3 Sport and name grid -->
       <div class="image-grid">
         <div class="image-item">
-          <img src="basketball.jpg" alt="Basketball">
+          <img src="../assets/basketball.jpg" alt="Basketball">
           <p><strong>Basketball</strong></p>
         </div>
         <div class="image-item">
-          <img src="cricket.jpg" alt="Cricket">
+          <img src="../assets/cricket.jpg" alt="Cricket">
           <p><strong>Cricket</strong></p>
         </div>
         <div class="image-item">
-          <img src="hockey.jpg" alt="Hockey">
+          <img src="../assets/hockey.jpg" alt="Hockey">
           <p><strong>Hockey</strong></p>
         </div>
         <div class="image-item">
-          <img src="lacrose.jpg" alt="Lacrosse">
+          <img src="../assets/lacrose.jpg" alt="Lacrosse">
           <p><strong>Lacrosse</strong></p>
         </div>
         <div class="image-item">
-          <img src="rugby.jpg" alt="Rugby">
+          <img src="../assets/rugby.jpg" alt="Rugby">
           <p><strong>Rugby</strong></p>
         </div>
         <div class="image-item">
-          <img src="snowboard.jpg" alt="Snowboarding">
+          <img src="../assets/snowboard.jpg" alt="Snowboarding">
           <p><strong>Snowboarding</strong></p>
         </div>
         <div class="image-item">
-          <img src="tennis.jpg" alt="Tennis">
+          <img src="../assets/tennis.jpg" alt="Tennis">
           <p><strong>Tennis</strong></p>
         </div>
         <div class="image-item">
-          <img src="track.jpg" alt="Track">
+          <img src="../assets/track.jpg" alt="Track">
           <p><strong>Track</strong></p>
         </div>
         <div class="image-item">
-          <img src="water polo.jpg" alt="Water Polo">
+          <img src="../assets/water_polo.jpg" alt="Water Polo">
           <p><strong>Water Polo</strong></p>
         </div>
       </div>
+		<!-- Side right text -->
       <div class="text-right">
         <div class="text-item">
         <p><strong>We are committed to:</strong><br>
@@ -83,7 +87,7 @@
       </div>
     </div>
   </div>
-
+<!-- Footer -->
     <footer class="footer">
       <div class="column">
         <p class="footertextinfo">Contact Us<br></p>
@@ -94,7 +98,7 @@
         <p class="footertextinfo">admin@rosmini.school.nz<br></p>
       </div>
       <div class="column">
-        <a class="footertext" href="index.html">Home<br></a>
+        <a class="footertext" href="../index.html">Home<br></a>
         <a class="footertext" href="sport.html">Sport<br></a>
         <a class="footertext" href="staff.html">Staff<br></a>
         <a class="footertext">News<br></a>
