--- a/html/staff.html
+++ b/html/staff.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rosmini College Website</title>
-  <link rel="stylesheet" href="staff.css" />
+  <link rel="stylesheet" href="../css/staff.css">
 </head>
 <body>
-
+<!-- Title and logo -->
   <div class="flex-container">
     <div><h2>Rosmini College</h2></div>
-    <img src="logo.png" class="logo" alt="Rosmini College Logo" />
+    <img src="../assets/logo.png" class="logo" alt="Rosmini College Logo">
     <div><h3>Charity Fulfils the Law</h3></div>
   </div>
-
+<!-- Navbar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="sport.html">Sport</a></li>
-      <li><a href="staff.html" class="active" >Staff</a></li>
+      <li><a href="#staff" class="active" >Staff</a></li>
       <li><a href="#learningareas">Learning Areas</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contactus">Contact Us</a></li>
     </ul>
   </nav>
+	<!-- Staff title -->
     <div class="titlestaff">
         <h2> Staff at Rosmini College</h2>
         </div>
 
-        <!-- DT Teachers Row -->
+<!-- DTE Row for staff -->
         <div class="staff-row">
             <div class="staff-member">
-                <img src="John.png" alt="DTE Teacher 1">
+                <img src="../assets/John.png" alt="DTE Teacher 1">
                 <h4>Mr. Lennard John</h4>
                 <p>Digital Technology Teacher</p>
             </div>
             <div class="staff-member">
-                <img src="Foong.png" alt="DTE Teacher 2">
+                <img src="../assets/Foong.png" alt="DTE Teacher 2">
                 <h4>Mr. D Foong</h4>
                 <p>Digital Technology Teacher</p>
             </div>
         </div>
 
-        <!-- Geology Teachers Row -->
+<!-- Geography row for staff -->
         <div class="staff-row">
             <div class="staff-member">
-                <img src="latch.png" alt="Geography Teacher 1">
+                <img src="../assets/latch.png" alt="Geography Teacher 1">
                 <h4>Mr. Roger Latch</h4>
                 <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
-                <img src="maggs.png" alt="Geography Teacher 2">
+                <img src="../assets/maggs.png" alt="Geography Teacher 2">
                 <h4>Mr. Geoff Maggs</h4>
                 <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
-                <img src="morrogh.png" alt="Geography Teacher 3">
+                <img src="../assets/morrogh.png" alt="Geography Teacher 3">
                 <h4>Ms. Judith Morrogh</h4>
                 <p>Geography Teacher</p>
             </div>
             <div class="staff-member">
-                <img src="cooper.png" alt="Geography Teacher 4">
+                <img src="../assets/cooper.png" alt="Geography Teacher 4">
                 <h4>Mr. Nixon Cooper</h4>
                 <p>Geography Teacher</p>
             </div>
         </div>
-    </div>
 
+<!-- Footer -->
     <footer class="footer">
         <div class="column">
             <p class="footertextinfo">Contact Us<br></p>
@@ -77,7 +78,7 @@
             <p class="footertextinfo">admin@rosmini.school.nz<br></p>
         </div>
         <div class="column">
-            <a class="footertext" href="index.html">Home<br></a>
+            <a class="footertext" href="../index.html">Home<br></a>
             <a class="footertext" href="sport.html">Sport<br></a>
             <a class="footertext" href="staff.html">Staff<br></a>
             <a class="footertext">News<br></a>
